# victoria_ros

./: .travis.yml  README.md
depth_laser_filter/: CMakeLists.txt  package.xml
depth_laser_filter/launch/: depth_scan_filter.launch  depth_single_reading_fiflter.launch  depth_single_reading_filter.launch  hokuyo_filtered.launch  hokuyo_single_reading_filter.launch  single_reading_filter.launch
depth_laser_filter/src/: depth_filter_node.cpp  single_readings_filter_node.cpp
victoria_control/: CMakeLists.txt  README.md  package.xml
victoria_control/config/: control.yaml  dual_control.yaml  localization.yaml
victoria_control/launch/: control.launch  control_and_localization.launch  teleop.launch
victoria_description/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
victoria_description/launch/: description.launch
victoria_description/meshes/: base_link_mod.dae  top_chassis_mod.dae
victoria_description/robots/: victoria.gazebo.xacro  victoria.xacro
victoria_description/urdf/: decorations.urdf.xacro  victoria.gazebo.xacro  victoria.urdf.xacro  wheel.urdf.xacro
victoria_description/urdf/accessories/: kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
