<?xml version="1.0"?>
<package>
  <name>depth_laser_filter</name>
  <version>0.0.0</version>
  <description>The depth_filter package</description>

  <maintainer email="jrcapriles@gmail.com">Jose Capriles</maintainer>
  <author email="jrcapriles@gmail.com">Jose Capriles</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>angles</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
  </export>

</package>
