<?xml version="1.0"?>
<package format="2">
  <name>victoria_control</name>
  <version>0.0.1</version>
  <description>Victoria controller configurations</description>


  <author email="jrcapriles@gmail.com">Jose Capriles</author>
  <maintainer email="jrcapriles@gmail.com">Jose Capriles</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/victoriarobotics</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
  </export>
</package>
